# garuda-downloader

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  build.sh  garuda-downloader_en_GB.ts  garudadownloader.cpp  garudadownloader.h  garudadownloader.ui  main.cpp  resources-linux.qrc  resources-windows.qrc  resources.qrc  updaterwindow.cpp  updaterwindow.h  updaterwindow.ui
resources/: Garuda-Downloader.desktop  etcher.zsync  popsicle.zsync
